feat: rendering the zodiac

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1 class="title">Find out your Oriental Zodiac!</h1>
       <img class="image" src="./img/zodiac.png" alt="" />
       <h3>Type the year you were born</h3>
-      <form class="userSubmit" action="">
+      <form class="userSubmit" action="" id="zodiacForm">
         <input
           class="userYear"
           id="userYear"
